--- a/src/app/components/cards/history-card/history-card.component.html
+++ b/src/app/components/cards/history-card/history-card.component.html
@@ -1,13 +1,13 @@
 <div class='history_card'>
-	<ul class='infoList'>
-		<li>
+	<ul class='info_list'>
+		<li class='info_list__item'>
 			<label htmlFor='address'>Адрес</label>
 			<p
 				id='address'
 				class='history_card__info'
 			>Казань, проспект Победы, 141</p>
 		</li>
-		<li>
+		<li class='info_list__item'>
 			<label>Материал</label>
 			<div class='history_card__info'>
 				<ul class='materials_list'>
@@ -29,7 +29,7 @@
 				</ul>
 			</div>
 		</li>
-		<li>
+		<li class='info_list__item'>
 			<label>Дата</label>
 			<p class='history_card__info'>25.09.2021</p>
 		</li>
