--- a/src/app/components/cards/history-card/history-card.component.sass
+++ b/src/app/components/cards/history-card/history-card.component.sass
@@ -19,10 +19,15 @@
 			margin-bottom: 40px
 			max-width: 343px
 
-.infoList
+.info_list
 	list-style: none
 	padding-left: 0
 	margin-top: 0
+
+	.info_list__item
+		margin-top: 16px
+
+
 
 label
 	font-size: 14px
@@ -30,10 +35,10 @@ label
 	color: rgba(0, 11, 38, 0.4)
 
 .materials_list
+
 	list-style-type: disc
 	display: flex
 	padding: 0
-
 	@include _700
 		flex-wrap: wrap
 
