--- a/src/app/components/cards/promocode-card/promocode-card.component.html
+++ b/src/app/components/cards/promocode-card/promocode-card.component.html
@@ -2,22 +2,22 @@
 	<div class='promo_code__img_wrapper'>
 		<img [src]='img' alt="" class='promo_code__img'/>
 	</div>
-	<div class=promo_code__card__info__wrapper>
-		<ul class='infoList'>
+	<div class=promo_code__card_info_wrapper>
+		<ul class='info_list'>
 			<li>
 				<label>Дата создания:</label>
-				<p id="date" class='promo_code__card__info'>25.09.2021</p>
+				<p id="date" class='promo_code__card_info'>25.09.2021</p>
 			</li>
 			<li>
 				<label htmlFor="link">Ссылка на товар:</label>
-				<p id="link" class='promo_code__card__info__link'>
+				<p id="link" class='promo_code__card_info__link'>
 					<a href="#" class='link'>
 						adidas.com/clothes/WddfJfsf7dt6fsHFIuj5пdfsZFu...
 					</a>
 				</p>
 			</li>
 		</ul>
-		<div class='promo_code__btn__wrapper'>
+		<div class='promo_code__btn_wrapper'>
 			<button class='promo_code__btn'>Показать qr-код</button>
 		</div>
 	</div>
