--- a/src/app/styles/varibles.sass
+++ b/src/app/styles/varibles.sass
@@ -1,3 +1,4 @@
 $button-success: rgba(7, 200, 142, 1)
 $button-success-hover: rgb(0, 150, 106)
 $max-width: 1200px
+$label-color: rgba(0, 11, 38, 0.4)
