--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -6,13 +6,13 @@
 			                    text='Посмотри, где в твоем городе можно сдать вторсырьё на переработку'
 			                    title='Пункты сбора'
 			                    bgImg='./assets/images/map.svg'
-			                    link='/f'
+			                    link='/map'
 			></app-main-page-card>
 			<app-main-page-card class='card'
 			                    text='Используй заработанные экокоины для покупки товаров из переработанных материалов '
 			                    title='ЭкоМаркет'
 			                    bgImg='./assets/images/market.svg'
-			                    link='/f'
+			                    link='/market'
 			></app-main-page-card>
 		</div>
 	</div>
