--- a/src/app/styles/mixins.sass
+++ b/src/app/styles/mixins.sass
@@ -16,6 +16,10 @@
 	@media (max-width: 795px)
 		@content
 
+@mixin _600
+	@media (max-width: 600px)
+		@content
+
 @mixin modal-default-font-settings
 	font-weight: 400
 	font-size: 14px
