--- a/src/app/pages/market-page/market-page.component.sass
+++ b/src/app/pages/market-page/market-page.component.sass
@@ -1,3 +1,5 @@
+@import "src/app/styles/mixins.sass"
+
 .market
 	&_wrapper
 		padding-top: 40px
@@ -73,7 +75,18 @@
 			background-color: rgba(62, 80, 114, 0.30)
 
 .products_table
-	width: 100%
+	display: grid
+	grid-template-columns: repeat(auto-fill, 274px)
+	grid-column-gap: 15px
+	grid-row-gap: 32px
+	&_wrapper
+		width: 100%
+
+		@include _700
+			display: flex
+			justify-content: center
+			margin-top: 15px
+
 
 	&__row
 		display: flex
