--- a/src/app/components/cards/user-card/user-card.component.html
+++ b/src/app/components/cards/user-card/user-card.component.html
@@ -1,7 +1,7 @@
 <div class='user__card'>
 	<div>
 		<div class='user__avatar_container'>
-			<img src='./assets/images/34Syn2ezKLM.jpeg'
+			<img src='/assets/images/34Syn2ezKLM.jpeg'
 			     alt='avatar'
 			     class='user__image' />
 		</div>
