--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
 		<nav class='nav__panel'>
 			<div class='header__logo'>
 				<object
-					data='./assets/images/logo.svg'
+					data='/assets/images/logo.svg'
 					type=''
 				></object>
 			</div>
@@ -86,7 +86,7 @@
 			<ng-container *ngIf='auth.isAuthorized'>
 				<li class='nav__link header__balance'>
 					<div class='header__icon'>
-						<img src='./assets/images/img.png'
+						<img src='/assets/images/img.png'
 						     width='24'
 						     height='24' />
 					</div>
@@ -97,7 +97,7 @@
 				<a routerLink='/profile/promocode'
 				   class='nav__link'>
 					<div class='header__icon'>
-						<img src='./assets/images/34Syn2ezKLM.jpeg'
+						<img src='/assets/images/34Syn2ezKLM.jpeg'
 						     class='header__photo' />
 					</div>
 					<p></p>
