--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -5,13 +5,13 @@
 			<app-main-page-card class='card'
 			                    text='Посмотри, где в твоем городе можно сдать вторсырьё на переработку'
 			                    title='Пункты сбора'
-			                    bgImg='./assets/images/map.svg'
+			                    bgImg='/assets/images/map.svg'
 			                    link='/map'
 			></app-main-page-card>
 			<app-main-page-card class='card'
 			                    text='Используй заработанные экокоины для покупки товаров из переработанных материалов '
 			                    title='ЭкоМаркет'
-			                    bgImg='./assets/images/market.svg'
+			                    bgImg='/assets/images/market.svg'
 			                    link='/market'
 			></app-main-page-card>
 		</div>
