colors variables refactoring

--- a/src/app/components/banner/banner.component.sass
+++ b/src/app/components/banner/banner.component.sass
@@ -1,3 +1,4 @@
+@import "src/app/styles/varibles.sass"
 .bannerWrapper
 	width: 100%
 	max-width: 1600px
@@ -39,7 +40,7 @@
 
 	white-space: pre-line
 
-	color: rgba(0, 11, 38, 0.8)
+	color: rgba($label-color, 0.8)
 
 	margin-bottom: 40px
 
@@ -90,7 +91,7 @@
 		font-style: normal
 		font-weight: 400
 		line-height: 24px
-		color: rgba(0, 11, 38, 0.8)
+		color: rgba($label-color, 0.8)
 
 	.bannerBtn
 		width: 100%
