--- a/src/app/components/code-confirm-form/code-confirm-form.component.sass
+++ b/src/app/components/code-confirm-form/code-confirm-form.component.sass
@@ -1,11 +1,12 @@
 @use "../modals/modal-content/login-form/login-form.component"
+@import "src/app/styles/varibles.sass"
 .codeModal__phone_number_container
 	display: flex
 	flex-direction: column
 
 	p
 		margin: 0
-		color: rgba(0, 11, 38, 0.64)
+		color: rgba($label-color, 0.64)
 		font-weight: 500
 
 	.codeModal__phone_number
