--- a/src/app/components/filter-modal-container/filter-modal-container.component.sass
+++ b/src/app/components/filter-modal-container/filter-modal-container.component.sass
@@ -1,3 +1,4 @@
+@import "src/app/styles/varibles.sass"
 .title
 	font-size: 28px
 
@@ -20,7 +21,7 @@
 .filterModal__closeButton
 	height: 3px
 	width: 32px
-	background: rgba(62, 80, 114, 0.24)
+	background: rgba($button-secondary-blue, 0.24)
 	border-radius: 4px
 	border: none
 
@@ -43,9 +44,9 @@
 
 .button_remove
 	@extend .button_submit
-	background: rgba(62, 80, 114, 0.08)
+	background: rgba($button-secondary-blue, 0.08)
 	color: black
 
 .button_remove:hover
-	background: rgba(62, 80, 114, 0.2)
+	background: rgba($button-secondary-blue, 0.2)
 
