--- a/src/app/components/filter/filter.component.sass
+++ b/src/app/components/filter/filter.component.sass
@@ -1,8 +1,9 @@
+@import "src/app/styles/varibles.sass"
 .filter__container
 	display: flex
 	flex-direction: column
 	padding: 0 24px 24px 24px
-	border: 1px solid rgba(62, 80, 114, 0.16)
+	border: 1px solid rgba($button-secondary-blue, 0.16)
 	border-radius: 16px
 	width: 100%
 
