--- a/src/app/components/footer/footer.component.sass
+++ b/src/app/components/footer/footer.component.sass
@@ -1,7 +1,8 @@
+@import "src/app/styles/varibles.sass"
 .footer__wrapper
 	position: relative
 	bottom: 0
-	box-shadow: 0px -0.5px 0px rgba(0, 0, 0, 0.12)
+	box-shadow: 0px -0.5px 0px rgba($black, 0.12)
 	grid-row-start: 4
 	grid-row-end: 5
 
@@ -18,7 +19,7 @@
 	height: 64px
 
 .footerLink
-	color: rgba(0, 11, 38, 0.64)
+	color: rgba($label-color, 0.64)
 
 	&:hover
 		cursor: pointer
