--- a/src/app/components/modals/modal-content/login-form/login-form.component.sass
+++ b/src/app/components/modals/modal-content/login-form/login-form.component.sass
@@ -1,8 +1,9 @@
 @import "src/app/styles/mixins.sass"
+@import "src/app/styles/varibles.sass"
 
 .form__input
 	display: flex
-	border: 1px solid rgba(0, 11, 38, 0.16)
+	border: 1px solid rgba($label-color, 0.16)
 	margin-top: 24px
 	border-radius: 8px
 	padding: 20px 16px
