--- a/src/app/components/modals/modal-content/modal-menu-content/modal-menu-content.component.sass
+++ b/src/app/components/modals/modal-content/modal-menu-content/modal-menu-content.component.sass
@@ -1,3 +1,4 @@
+@import "src/app/styles/varibles.sass"
 .ul_links
 	list-style-type: none
 	font-weight: 500
@@ -6,12 +7,12 @@
 	padding: 0
 
 	a
-		color: rgba(0, 11, 38, 0.88)
+		color: rgba($label-color, 0.88)
 
 	button
 
 		@extend .ul_links
-		color: rgba(0, 11, 38, 0.88)
+		color: rgba($label-color, 0.88)
 
 .link
 	display: flex
