--- a/src/app/components/ui/button/button.component.sass
+++ b/src/app/components/ui/button/button.component.sass
@@ -1,8 +1,9 @@
+@import "src/app/styles/varibles.sass"
 .defaultBtn
 	border-radius: 8px
 	padding: 16px 24px
 	border: 0
-	background: rgba(62, 80, 114, 0.08)
+	background: rgba($button-secondary-blue, 0.08)
 	color: black
 	font-size: 16px
 	&:hover
