--- a/src/app/components/ui/product-card/product-card.component.sass
+++ b/src/app/components/ui/product-card/product-card.component.sass
@@ -1,4 +1,5 @@
 @import "src/app/styles/mixins.sass"
+@import "src/app/styles/varibles.sass"
 
 .product_card
 	&__wrapper
@@ -38,7 +39,7 @@
 	&__type
 		margin-top: 5px
 		font-weight: 500
-		color: rgba(0, 11, 38, 0.56)
+		color: rgba($label-color, 0.56)
 	&__cost
 		display: flex
 		align-items: center
