--- a/src/app/styles/mixins.sass
+++ b/src/app/styles/mixins.sass
@@ -45,7 +45,7 @@
 	font-size: 14px
 	line-height: 18px
 	letter-spacing: -0.15px
-	color: rgba(0, 11, 38, 0.64)
+	color: rgba(var.$label-color, 0.64)
 	&:hover
 		cursor: pointer
 		color: rgba(0, 7, 23, 0.64)
@@ -55,9 +55,9 @@
 	height: 100%
 	display: grid
 
-	color: rgb(0, 11, 38)
+	color: var.$label-color
 	border-bottom: 2px solid rgb(15, 141, 106)
 	align-content: center
 
 	&:hover
-		color: rgb(0, 11, 38)
+		color: var.$label-color
