--- a/src/app/components/banner-swiper/banner-swiper.component.sass
+++ b/src/app/components/banner-swiper/banner-swiper.component.sass
@@ -1,6 +1,7 @@
 @import '~swiper/swiper.min.css'
 @import '~swiper/modules/navigation/navigation.min.css'
 @import "src/app/styles/mixins.sass"
+@import "src/app/styles/varibles.sass"
 
 .custom_swiper
 	&__wrapper
@@ -27,7 +28,7 @@
 			width: 44px
 			height: 44px
 			border-radius: 100%
-			box-shadow: 0px 4px 24px rgba(0, 11, 38, 0.12)
+			box-shadow: 0px 4px 24px rgba($label-color, 0.12)
 			display: flex
 			align-items: center
 			justify-content: center
