--- a/src/app/components/cards/promocode-card/promocode-card.component.sass
+++ b/src/app/components/cards/promocode-card/promocode-card.component.sass
@@ -35,7 +35,7 @@
 				flex-direction: column
 
 	&__btn
-		background: rgba(62, 80, 114, 0.08)
+		background: rgba($button-secondary-blue, 0.08)
 		border: 0
 		border-radius: 8px
 		font-size: 14px
