--- a/src/app/components/cards/user-card/user-card.component.sass
+++ b/src/app/components/cards/user-card/user-card.component.sass
@@ -1,3 +1,5 @@
+@import "src/app/styles/varibles.sass"
+
 .user
 
 	&__card
@@ -6,7 +8,7 @@
 		width: 100%
 		height: 392px
 		text-align: center
-		border: 1px solid rgba(62, 80, 114, 0.16)
+		border: 1px solid rgba($button-secondary-blue, 0.16)
 
 		box-sizing: border-box
 		border-radius: 20px
@@ -22,7 +24,7 @@
 
 	&__info
 		margin-top: 16px
-		color: rgba(0, 11, 38, 0.72)
+		color: rgba($label-color, 0.72)
 
 		p
 			line-height: 20px
@@ -35,6 +37,6 @@
 
 	padding: 16px 0
 
-	background: rgba(62, 80, 114, 0.08)
+	background: rgba($button-secondary-blue, 0.08)
 	border-radius: 8px
 	border: 0
