--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -1,5 +1,6 @@
 @use '/src/styles.sass' as gs
 @import "src/app/styles/mixins.sass"
+@import "src/app/styles/varibles.sass"
 
 
 .header
@@ -14,12 +15,12 @@
 
 	&_wrapper
 		height: 80px
-		box-shadow: 0px 0.5px 0px rgba(0, 0, 0, 0.12)
+		box-shadow: 0px 0.5px 0px rgba(gs.$black, 0.12)
 		font-weight: normal
 		font-size: 14px
 		line-height: 18px
 		letter-spacing: -0.15px
-		color: rgba(0, 11, 38, 0.64)
+		color: rgba($label-color, 0.64)
 
 	&__logo
 		margin-right: 49px
@@ -30,7 +31,7 @@
 		height: 100%
 		margin: 0
 		list-style: none
-		color: rgba(0, 11, 38, 0.8)
+		color: rgba($label-color, 0.8)
 		align-items: center
 
 		@include _700
@@ -41,7 +42,7 @@
 		align-items: center
 
 		.nav__list
-			color: rgba(0, 11, 38, 0.64)
+			color: rgba($label-color, 0.64)
 
 
 
@@ -65,7 +66,7 @@
 
 		&-active
 			height: 100%
-			color: rgba(0, 11, 38, 1)
+			color: rgba($label-color, 1)
 			font-weight: 500
 
 
@@ -104,10 +105,10 @@
 
 
 a
-	color: rgba(0, 11, 38, 0.64)
+	color: rgba($label-color, 0.64)
 
 a:hover
-	color: rgba(0, 11, 38, 1)
+	color: rgba($label-color, 1)
 
 
 .burgerMenu
