--- a/src/app/styles/varibles.sass
+++ b/src/app/styles/varibles.sass
@@ -1,4 +1,6 @@
 $button-success: rgba(7, 200, 142, 1)
 $button-success-hover: rgb(0, 150, 106)
+$button-secondary-blue: rgb(62, 80, 114)
 $max-width: 1200px
-$label-color: rgba(0, 11, 38, 0.4)
+$label-color: rgba(0, 11, 38)
+$black: rgb(0,0,0)
