--- a/src/app/pages/market-page/market-page.component.sass
+++ b/src/app/pages/market-page/market-page.component.sass
@@ -4,7 +4,7 @@
 $filter-active: rgb(6, 14, 33)
 $filter-active-hover: rgb(1, 1, 7)
 $balance_card-shadow-blue: rgb(21, 45, 103)
-$balance_card-shadow-light-blue: rgb(121,121,121)
+$balance_card-shadow-light-blue: rgb(121, 121, 121)
 .market
 	&_wrapper
 		padding-top: 40px
@@ -83,6 +83,7 @@ $balance_card-shadow-light-blue: rgb(121,121,121)
 	grid-template-columns: repeat(auto-fill, 274px)
 	grid-column-gap: 15px
 	grid-row-gap: 32px
+
 	&_wrapper
 		width: 100%
 
@@ -114,7 +115,7 @@ $balance_card-shadow-light-blue: rgb(121,121,121)
 	border: 1px solid rgba($button-secondary-blue, 0.12)
 	border-radius: 16px
 
-	box-shadow: 0px 12px 32px rgba($balance_card-shadow-light-blue 0.12), 0px 4px 24px rgba($balance_card-shadow-blue, 0.12)
+	box-shadow: 0px 12px 32px rgba(121, 121, 121, 0.12), 0px 4px 24px rgba($balance_card-shadow-blue, 0.12)
 
 	&__title
 		margin-top: 130.5px
