--- a/src/app/components/modals/modal-content/reg-form/reg-form.component.html
+++ b/src/app/components/modals/modal-content/reg-form/reg-form.component.html
@@ -45,6 +45,9 @@
 			value='Зарегистрироваться'
 		></app-button>
 	</div>
+	<ng-container *ngIf='submitError|async'>
+		<app-form-error-message [validationMessage]=errorMessage></app-form-error-message>
+	</ng-container>
 	<div class='modal__underLinks'>
 		<button (click)='this.dialog.openLoginDialog()'>
 			Я уже зарегистрировался(-ась)
