--- a/src/app/styles/varibles.sass
+++ b/src/app/styles/varibles.sass
@@ -4,3 +4,7 @@ $button-secondary-blue: rgb(62, 80, 114)
 $max-width: 1200px
 $label-color: rgba(0, 11, 38)
 $black: rgb(0,0,0)
+$filter-active: rgb(6, 14, 33)
+$filter-active-hover: rgb(1, 1, 7)
+$balance_card-shadow-blue: rgb(21, 45, 103)
+$balance_card-shadow-light-blue: rgb(121, 121, 121)
