--- a/src/app/pages/map-page/map-page.component.sass
+++ b/src/app/pages/map-page/map-page.component.sass
@@ -1,2 +1,31 @@
 #map
 	height: 100%
+	z-index: 10
+
+.cards
+	&__wrapper
+		position: relative
+		max-width: 1220px
+		padding: 0 20px
+		z-index: 1001
+		margin: 32px auto 0
+
+	&__list
+		list-style: none
+
+	&__element
+		&:not(:last-child)
+			margin-bottom: 8px
+
+	&__form
+		&_wrapper
+			display: flex
+			justify-content: space-between
+			margin-bottom: 32px
+		&__dropdowns
+			width: 100%
+			display: flex
+			justify-content: space-between
+			flex-wrap: wrap
+			margin-left: 20px
+
