--- a/src/app/pages/market-page/market-page.component.sass
+++ b/src/app/pages/market-page/market-page.component.sass
@@ -1,17 +1,13 @@
 @import "src/app/styles/mixins.sass"
 @import "src/app/styles/varibles.sass"
 
-$filter-active: rgb(6, 14, 33)
-$filter-active-hover: rgb(1, 1, 7)
-$balance_card-shadow-blue: rgb(21, 45, 103)
-$balance_card-shadow-light-blue: rgb(121, 121, 121)
+
 .market
 	&_wrapper
 		padding-top: 40px
 		width: 100%
 		max-width: 1200px
-		margin: 0 auto
-		margin-bottom: 108px
+		margin: 0 auto 108px
 
 	&__title
 		padding: 20px 0
