added market request and loading(skeleton)

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -41,7 +41,7 @@
 
 				<li class='nav__link'>
 					<a
-						routerLink='/'
+						routerLink='/about'
 						routerLinkActive='active'
 						[routerLinkActiveOptions]="{exact:true}"
 					>
