--- a/src/app/pages/market-page/market-page.component.html
+++ b/src/app/pages/market-page/market-page.component.html
@@ -18,52 +18,64 @@
 			</div>
 			<button class='remove_filters_btn'>Сбросить фильтры</button>
 		</div>
-		<div class='products_table_wrapper'>
-			<div class='products_table'>
-				<div class='balance__card'>
-					<div class='balance__card__title'>
-						На вашем балансе
-						<img class='balance__logo'
-						     src='/assets/images/img.png' />
-						<div class='balance'>200</div>
-					</div>
-					*/}
-					Вы можете обменять их на скидку 200 руб
-					<button class='promo_code__btn'>Получить промокод</button>
-				</div>
-
-				<app-product-card
-					imgUrl='/assets/images/marketProductImage.png'
-					brand='Nike'
-					productName='Nike Air Max 2021'
-					productType='Мужская обувь'
-					cost='1000'></app-product-card>
-				<app-product-card
-					imgUrl='/assets/images/marketProductImage.png'
-					brand='Nike'
-					productName='Nike Air Max 2021'
-					productType='Мужская обувь'
-					cost='1000'></app-product-card>
-
-				<app-product-card
-					imgUrl='/assets/images/marketProductImage.png'
-					brand='Nike'
-					productName='Nike Air Max 2021'
-					productType='Мужская обувь'
-					cost='1000'></app-product-card>
-				<app-product-card
-					imgUrl='/assets/images/marketProductImage.png'
-					brand='Nike'
-					productName='Nike Air Max 2021'
-					productType='Мужская обувь'
-					cost='1000'></app-product-card>
-				<app-product-card
-					imgUrl='/assets/images/marketProductImage.png'
-					brand='Nike'
-					productName='Nike Air Max 2021'
-					productType='Мужская обувь'
-					cost='1000'></app-product-card>
-			</div>
+		<div class='loading_container'
+		     *ngIf='isLoading | async; else loadingBlock'>
+			<app-card-skeleton>
+			</app-card-skeleton>
+			<app-card-skeleton>
+			</app-card-skeleton>
+			<app-card-skeleton>
+			</app-card-skeleton>
 		</div>
+		<ng-template #loadingBlock>
+			<div class='products_table_wrapper'>
+				<div class='products_table'>
+					<div class='balance__card'>
+						<div class='balance__card__title'>
+							На вашем балансе
+							<img class='balance__logo'
+							     src='/assets/images/img.png' />
+							<div class='balance'>200</div>
+						</div>
+						Вы можете обменять их на скидку 200 руб
+						<button class='promo_code__btn'>Получить промокод</button>
+					</div>
+
+					<app-product-card
+						imgUrl='/assets/images/marketProductImage.png'
+						brand='Nike'
+						productName='Nike Air Max 2021'
+						productType='Мужская обувь'
+						cost='1000'></app-product-card>
+					<app-product-card
+						imgUrl='/assets/images/marketProductImage.png'
+						brand='Nike'
+						productName='Nike Air Max 2021'
+						productType='Мужская обувь'
+						cost='1000'></app-product-card>
+
+					<app-product-card
+						imgUrl='/assets/images/marketProductImage.png'
+						brand='Nike'
+						productName='Nike Air Max 2021'
+						productType='Мужская обувь'
+						cost='1000'></app-product-card>
+					<app-product-card
+						imgUrl='/assets/images/marketProductImage.png'
+						brand='Nike'
+						productName='Nike Air Max 2021'
+						productType='Мужская обувь'
+						cost='1000'></app-product-card>
+					<app-product-card
+						imgUrl='/assets/images/marketProductImage.png'
+						brand='Nike'
+						productName='Nike Air Max 2021'
+						productType='Мужская обувь'
+						cost='1000'>
+
+					</app-product-card>
+				</div>
+			</div>
+		</ng-template>
 	</div>
 </div>
