--- a/src/app/pages/market-page/market-page.component.sass
+++ b/src/app/pages/market-page/market-page.component.sass
@@ -151,6 +151,14 @@ $balance_card-shadow-light-blue: rgb(121, 121, 121)
 		cursor: pointer
 		background: #059b6f
 
+.loading_container
+	display: flex
+	flex-direction: row
+	align-items: center
+	width: 100%
+	max-width: 871px
+	justify-content: space-between
+
 @media screen and (max-width: 500px)
 	.temp
 		margin: 0
