--- a/src/app/components/cards/user-card/user-card.component.html
+++ b/src/app/components/cards/user-card/user-card.component.html
@@ -1,4 +1,4 @@
-<div class='user__card'>
+<button class='user__card'>
 	<div>
 		<div class='user__avatar_container'>
 			<img src='/assets/images/34Syn2ezKLM.jpeg'
@@ -15,4 +15,4 @@
 		</div>
 		<button class='button__edit'>Редактировать</button>
 	</div>
-</div>
+</button>
